objects/GitHub_Connection__c.object
<CustomObject>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connected_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GitHub_Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GitHub_Username__c</fullName>
        <label>GitHub Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repo_Name__c</fullName>
        <label>Repo Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repo_Owner__c</fullName>
        <label>Repo Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Connected</fullName>
                </value>
                <value>
                    <fullName>Disconnected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GitHub Connection</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>GitHub Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GitHub Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>